improving the exception management and updating the tests + corrections